--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,14 @@
 # SPDX-License-Identifier GPL-2.0+
 ---
-# Our sensible defaults for dev_config. You can override them by putting
-# your variables in these files, the later has major precedence:
-#
-# ansible/roles/bootlinux/vars/main.yml
-# ansible/extra_vars.yml
+
+data_path: "/data"
+data_user: "vagrant"
+data_group: "vagrant"
+
+data_device: "/dev/nvme0n1"
+data_fstype: "xfs"
+data_label: "data"
+data_fs_opts: "-L {{ disk_setup_label }}"
 
 # Linux target defaults
 target_linux_admin_name: "Hacker Amanda"
@@ -12,8 +16,6 @@ target_linux_admin_email: "devnull@kernel.org"
 target_linux_git: "https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git"
 target_linux_tree: "linux-stable"
 target_linux_dir_path: "{{ data_path }}/linux-stable"
-#target_linux_tree:  "linux-next"
-#target_linux_tree: "linux"
 
 target_linux_version:  "4.19.62"
 target_linux_tag : "v{{ target_linux_version }}"
@@ -22,3 +24,6 @@ target_linux_config: "config-{{ target_linux_version }}"
 make: "make"
 target_linux_make_cmd: "{{ make }} -j8"
 target_linux_make_install_cmd: "{{ make }} modules_install install"
+
+# If defined we'll apply this delta for you.
+# target_linux_extra_patch: foo.patch
