--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 # Distro specific
-- include: tasks/install-deps/main.yml
+- name: Install dependencies
+  include_tasks: install-deps/main.yml
 
 - name: Create {{ data_path }} partition if not created yet
   include_role:
@@ -89,7 +90,7 @@
 
 - name: Update your boot grub file if necessary
   tags: [ 'linux', 'uninstall-linux', 'manual-update-grub' ]
-  import_tasks: tasks/update-grub/main.yml
+  import_tasks: update-grub/main.yml
   when: (manual_update_grub is defined) or (uninstall_kernel_ver is defined)
 
 - name: Install linux {{ target_linux_tree }}
