--- a/tasks/update-grub/main.yml
+++ b/tasks/update-grub/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks to install update-grub
 - name: Distro specific update of your grub boot file
-  import_tasks: tasks/update-grub/debian.yml
+  import_tasks: debian.yml
   when: ansible_facts['os_family']|lower == 'debian'
-- import_tasks: tasks/update-grub/suse.yml
+- import_tasks: suse.yml
   when: ansible_facts['os_family']|lower == 'suse'
-- import_tasks: tasks/update-grub/redhat.yml
+- import_tasks: redhat.yml
   when: ansible_facts['os_family']|lower == 'redhat'
