tasks: ignore complaint about not usign the git module for applying patches
ansible-lint complains that:

[303] git used in place of git module
/home/mcgrof/devel/roles/bootlinux/tasks/main.yml:39
Task/Handler: Apply kernel delta if requested

But... the git module does not support applying a patch yet.
We can use a tag to work around the complaint to ignore it.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,7 +40,7 @@
   command: "git am {{ target_linux_extra_patch }}"
   args:
     chdir: "{{ target_linux_dir_path }}"
-  tags: [ 'linux', 'extra-patch' ]
+  tags: [ 'linux', 'extra-patch', 'skip_ansible_lint' ]
   when: target_linux_extra_patch is defined
 
 - name: Copy configuration for linux {{ target_linux_tree }}
