tasks: fix complaint about rule 301 Commands should not change things if nothing needs doing
[301] Commands should not change things if nothing needs doing
/home/mcgrof/devel/roles/bootlinux/tasks/main.yml:55
Task/Handler: Configure linux {{ target_linux_tree }}

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,6 +54,8 @@
 
 - name: Configure linux {{ target_linux_tree }}
   shell: yes "" | make oldconfig
+  register: configure_done
+  changed_when: "configure_done.rc == 0"
   args:
     chdir: "{{ target_linux_dir_path }}"
   tags: [ 'linux', 'oldconfig' ]
