tasks: fix complaint [306] Shells that use pipes should set the pipefail option
[306] Shells that use pipes should set the pipefail option
/home/mcgrof/devel/roles/bootlinux/tasks/main.yml:55
Task/Handler: Configure linux {{ target_linux_tree }}

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,7 +53,9 @@
   tags: [ 'linux', 'git', 'config' ]
 
 - name: Configure linux {{ target_linux_tree }}
-  shell: yes "" | make oldconfig
+  shell: |
+    set -o pipefail
+    yes "" | make oldconfig
   register: configure_done
   changed_when: "configure_done.rc == 0"
   args:
