--- a/tasks/update-grub/debian.yml
+++ b/tasks/update-grub/debian.yml
@@ -4,4 +4,6 @@
   become_flags: 'su - -c'
   become_method: sudo
   command: "update-grub"
+  register: grub_update
+  changed_when: "grub_update.rc == 0"
   tags: [ 'linux', 'manual-update-grub' ]
