--- a/tasks/update-grub/redhat.yml
+++ b/tasks/update-grub/redhat.yml
@@ -4,4 +4,6 @@
   become_flags: 'su - -c'
   become_method: sudo
   command: "grub2-mkconfig -o \"$(readlink -e /etc/grub2.conf)\""
+  register: grub_update
+  changed_when: "grub_update.rc == 0"
   tags: [ 'linux', 'manual-update-grub' ]
