add configure linux failed_when clauses
Turn out we can return 0 or 141 on make oldconfig. Upon testing
we also cannot really tell when we really have changed, so just
use 0 or 141. Also, success can be 0 or 141.

The default for ansible is that any non zero return code means
a failure, so annotate when we expect it to succeed.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -57,7 +57,8 @@
     set -o pipefail
     yes "" | make oldconfig
   register: configure_done
-  changed_when: "configure_done.rc == 141"
+  changed_when: configure_done.rc == 0 or configure_done.rc == 141
+  failed_when: configure_done.rc != 0 and swap_exists.rc != 141
   args:
     chdir: "{{ target_linux_dir_path }}"
     executable: /bin/bash
