--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,7 +15,7 @@ target_linux_admin_name: "Hacker Amanda"
 target_linux_admin_email: "devnull@kernel.org"
 target_linux_git: "https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git"
 target_linux_tree: "linux-stable"
-target_linux_dir_path: "{{ data_path }}/linux-stable"
+target_linux_dir_path: "{{ data_path }}/{{ target_linux_tree }}"
 
 target_linux_version:  "4.19.62"
 target_linux_tag: "v{{ target_linux_version }}"
