opensuse: install diffutils to get cmp
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -15,6 +15,7 @@
       - sed
       - libopenssl-devel
       - libelf-devel
+      - diffutils
     extra_args: '--allow-vendor-change'
     state: latest
     disable_recommends: no
