opensuse: install net-tools to get hostname to build linux
Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -16,6 +16,7 @@
       - libopenssl-devel
       - libelf-devel
       - diffutils
+      - net-tools
     extra_args: '--allow-vendor-change'
     state: latest
     disable_recommends: no
