--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -17,6 +17,7 @@
       - libelf-devel
       - diffutils
       - net-tools
+      - ncurses-devel
     extra_args: '--allow-vendor-change'
     state: latest
     disable_recommends: no
