debian/suse: intall xfsprogs/e2fsprogs/btrfsprogs
This is to let you be more picky about which partition type to use.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/suse/main.yml
+++ b/tasks/install-deps/suse/main.yml
@@ -18,6 +18,9 @@
       - diffutils
       - net-tools
       - ncurses-devel
+      - xfsprogs
+      - e2fsprogs
+      - btrfsprogs
     extra_args: '--allow-vendor-change'
     state: latest
     disable_recommends: no
