--- a/tasks/install-deps/debian/main.yml
+++ b/tasks/install-deps/debian/main.yml
@@ -26,5 +26,8 @@
       - sed
       - libssl-dev
       - libelf-dev
+      - xfsprogs
+      - e2fsprogs
+      - btrfs-progs
     state: present
   tags: linux
