--- a/tasks/install-deps/redhat/main.yml
+++ b/tasks/install-deps/redhat/main.yml
@@ -1,4 +1,34 @@
 ---
-- name: Set up apt for Red Hat sources
+- name: Install packages we care about
+  become: yes
+  become_method: sudo
   yum:
     update_cache: yes
+    name: "{{ packages }}"
+  vars:
+    packages:
+      - bison
+      - flex
+      - git-core
+      - e2fsprogs
+      - xfsprogs
+      - xfsdump
+      - lvm2
+      - gcc
+      - make
+      - gawk
+      - bc
+      - dump
+      - libtool
+      - psmisc
+      - sed
+      - vim
+      - screen
+      - fio
+      - libaio-devel
+      - diffutils
+      - net-tools
+      - ncurses-devel
+      - xfsprogs
+      - e2fsprogs
+      - btrfs-progs
