--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,7 +22,12 @@ target_linux_tag: "v{{ target_linux_version }}"
 target_linux_delta_file:
 target_linux_config: "config-{{ target_linux_version }}"
 make: "make"
-target_linux_make_cmd: "{{ make }} -j8"
+# Once ansible v2.10 becomes available we can move on to using
+# ansible_processor_nproc but that was merged in 2020:
+# The commit is 34db57a47f875d11c4068567b9ec7ace174ec4cf
+# introduce fact "ansible_processor_nproc": number of usable vcpus #66569
+# https://github.com/ansible/ansible/pull/66569
+target_linux_make_cmd: "{{ make }} -j{{ ansible_processor_vcpus }}"
 target_linux_make_install_cmd: "{{ make }} modules_install install"
 
 # If defined we'll apply this delta for you.
