install-deps: add tools to help dracut when installing extra modules
A slew of modules have been enabled, and we need to install tools
to enable dracut to find these for its own purpose.

Signed-off-by: Luis Chamberlain <mcgrof@kernel.org>

--- a/tasks/install-deps/debian/main.yml
+++ b/tasks/install-deps/debian/main.yml
@@ -29,5 +29,11 @@
       - xfsprogs
       - e2fsprogs
       - btrfs-progs
+      - ntfs-3g
+      - mdadm
+      - rpcbind
+      - portmap
+      - hwinfo
+      - open-iscsi
     state: present
   tags: linux
