--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier GPL-2.0+
 ---
 
+infer_uid_and_group: True
+
 data_path: "/data"
 data_user: "vagrant"
 data_group: "vagrant"
